# cisastor

./: .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
.direnv/: flake-profile-2-link
.gemini/: GEMINI.md
.github/workflows/: ci.yml
docs/libs/: arena_allocator.md  data_containers.md  mover.md  progressbar.md  testing.md  utils.md
docs/libs/containers/: array_list.md  iterator.md  string.md  string_builder.md  string_view.md
docs/testing/: how-to.md
examples/: CMakeLists.txt  array_list.c  json.c  progressbar.c
libs/arena_allocator/: CMakeLists.txt  arena.c  arena.h
libs/data/: CMakeLists.txt
libs/data/containers/: array_list.c  array_list.h  array_list_test.c  iterator.c  iterator.h  iterator_test.c  stack.c  stack.h  stack_test.c  string.c  string.h  string_builder.c  string_builder.h  string_builder_test.c  string_test.c  string_view.c  string_view.h  string_view_test.c
libs/download/: CMakeLists.txt  download.c  download.h
libs/http_client/: CMakeLists.txt
libs/json/: CMakeLists.txt  context.h  grammar.c  grammar.h  grammar_test.c  json.c  json.h  lexer.c  lexer_test.c  parser.c  parser.h  parser_test.c  token.h
libs/json/generator/: generator.c
libs/mover/: CMakeLists.txt  mover.c  mover.h  mover_test.c
libs/progressbar/: CMakeLists.txt  macros.h  progressbar.c  progressbar.h
libs/testing/: CMakeLists.txt  CisastorTesting.cmake  Makefile  functions.c  functions.h  functions_test.c  shell.c  shell.h  shell_test.c  testing.c  testing.h  testing_t.c
libs/utils/: CMakeLists.txt  array_list.h  macros.h  string_view.c  string_view.h
libs/utils/include/: macros.h
